--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
+@import "./colors.scss";
 @import "./customRangeInpt.scss";
 
 * {
@@ -32,7 +33,7 @@ body {
 .app {
     display: flex;
     min-height: 20em;
-    border: solid 5px brown;
+    border: solid 5px rgb(165, 42, 42);
     width: 40em;
     align-content: stretch;
     align-items: stretch;
@@ -44,7 +45,7 @@ body {
 .keyboard, 
 .settings {
     flex: 1;
-    border: 1px solid red;
+    border: 1px solid $color-primary;
 }
 
 .keyboard {
@@ -54,19 +55,20 @@ body {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: .5em;
+    font-weight: bold;
 
         button {
         border: none;
         border-radius: 5px;    
         width: 100%;
         height: 100%;
-        background-color: brown;
-        color: white;
-        box-shadow: 2px 2px 5px blue;
+        background-color: $color-primary;
+        color: $color-text;
+        box-shadow: 2px 2px 5px $color-tertiary;
         }
 
         .active {
-            background: orange;
+            background: $color-secondary;
         }  
 }
 
@@ -78,10 +80,12 @@ body {
 }
 
 .screen {
+    color: $color-text;
+    font-weight: bold;
     display: flex;
     height: 2.5em;
     width: 13em;
-    background: darkgray;
+    background: $color-primary;
     text-align: center;
     align-content: center;
     align-items: center;
@@ -93,7 +97,7 @@ body {
     margin-bottom: .5em;
     &__name {
         text-align: center;
-        margin-bottom: 5px;
+        margin: 10px 0 5px;
     }
 
     &__input {
@@ -103,8 +107,8 @@ body {
     &__label {
         height: 1.5em;
         width: 3em;
-        background: yellow;
-        border: 3px solid yellow;
+        background: $color-tertiary;
+        border: 3px solid $color-tertiary;
         display: block;
         transition: .3s;
 
@@ -113,7 +117,7 @@ body {
             display: block;
             width: 50%;
             height: 100%;
-            background: red;
+            background: $color-secondary;
         }
     }
 
@@ -123,7 +127,7 @@ body {
             display: block;
             width: 50%;
             height: 100%;
-            background: red;
+            background: $color-secondary;
             transform: translateX(100%);
         }
     }
